# tasku_peatus

./: .gitignore  Cargo.toml
AndroidApp/app/: build.gradle.kts
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/java/com/freya/androidapp/: PermissionRequestActivity.java  RustLocationHelper.java
AndroidApp/app/src/main/java/dev/drigster/taskupeatus/: ActivityProvider.kt  AndroidUiHelper.kt  MainActivity.kt  PermissionRequestActivity.kt  RustLocationHelper.kt  RustPermissionHelper.kt
AndroidApp/app/src/main/res/values/: styles.xml
AndroidApp/gradle/: libs.versions.toml
AndroidApp/gradle/wrapper/: gradle-wrapper.properties
src/: app.rs  lib.rs  main.rs
src/assets/: item_data.json
src/components/: departure.rs  mod.rs  stop.rs
src/layouts/: main.rs
src/pages/: loading.rs  mod.rs  timetable.rs
src/utils/: departures_parser.rs  jni_utils.rs  mod.rs  preferences.rs  routes_parser.rs  stops_parser.rs  text_utils.rs
