[package]
name = "android"
version = "0.1.0"
edition = "2024"

[dependencies]
android-permissions = { version = "0.1.2", features = ["async"] }
blocking = "1.6.2"
chrono = "0.4.44"
dirs = "6.0.0"
env_logger = "0.11.9"
freya = { git = "https://github.com/SparkyTD/freya.git", branch = "android_fixes", features = [
    "radio",
    "router",
    "icons",
] }
freya-winit = { git = "https://github.com/SparkyTD/freya.git", branch = "android_fixes" }
futures-channel = "0.3.32"
geo = "0.32.0"
geo-types = "0.7.18"
log = "0.4.29"
ndk-context = "0.1.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
smol = "2.0.2"
ureq = "3.2.0"

[target.'cfg(target_os="android")'.dependencies]
android-activity = { version = "0.6.0", features = ["game-activity"] }
android_logger = "0.15.1"
winit = { version = "0.30.12", features = ["android-game-activity", "rwh_06"] }
jni = "0.21.1"

[lib]
path = "src/lib.rs"
name = "android_example"
crate-type = ["cdylib", "rlib"]

[[bin]]
path = "src/main.rs"
name = "desktop_example"
