[package]
name = "tasku_peatus"
version = "0.5.0"
edition = "2024"

[dependencies]
blocking = "1.6.2"
chrono = "0.4.44"
dirs = "6.0.0"
env_logger = "0.11.9"
freya = { git = "https://github.com/marc2332/freya.git", branch = "main", features = [
  "radio",
  "router",
  "icons",
] }
freya-winit = { git = "https://github.com/marc2332/freya.git", branch = "main" }
futures-channel = "0.3.32"
geo = "0.32.0"
geo-types = "0.7.18"
log = "0.4.29"
ndk-context = "0.1.1"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
smol = "2.0.2"
ureq = "3.3.0"

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.15.1"
winit = { version = "0.30.12", features = [
  "android-native-activity",
  "rwh_06",
] }
jni = "0.21.1"

[lib]
path = "src/lib.rs"
name = "android_example"
crate-type = ["cdylib", "rlib"]

[[bin]]
path = "src/main.rs"
name = "desktop_example"
